<resources>
    <string name="app_name">TestPortfolio</string>
    <string name="coin_logo">CoinLogo</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">"Время последнего обновления: %s"</string>
    <string name="slash">/</string>
    <string name="price">Цена:</string>
    <string name="minimum_day">Минимум за день:</string>
    <string name="maximum_day">Максимум за день:</string>
    <string name="last_deal">Последняя сделка:</string>
    <string name="last_update">Обновлено:</string>

</resources>